# Practica4_Aplicacion_Android

./: README.md
Codigo_Calcular_Momentos/: preprocesar_momentos.cpp  procesar
opencvvvvvvvv/: settings.gradle.kts
opencvvvvvvvv/app/: build.gradle.kts
opencvvvvvvvv/app/src/androidTest/java/com/example/opencvvvvvvvv/: ExampleInstrumentedTest.java
opencvvvvvvvv/app/src/main/: AndroidManifest.xml
opencvvvvvvvv/app/src/main/assets/: momentos.csv
opencvvvvvvvv/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
opencvvvvvvvv/app/src/main/java/com/example/opencvvvvvvvv/: DrawingView.java  MainActivity.java
opencvvvvvvvv/app/src/main/res/layout/: activity_main.xml
opencvvvvvvvv/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
opencvvvvvvvv/app/src/main/res/values-night/: themes.xml
opencvvvvvvvv/app/src/test/java/com/example/opencvvvvvvvv/: ExampleUnitTest.java
opencvvvvvvvv/gradle/wrapper/: gradle-wrapper.properties
